--- a/404.md
+++ b/404.md
@@ -1,1 +1,7 @@
-**404 - No encontrado**
+# :(
+No pudimos ubicar la dirección de esta página.
+
+¿Por qué sucede esto?
+* El contenido no existe. ¡Puedes crear esta página!
+* El contenido fue redireccionado a un nuevo destino.
+* La página solicitada no está disponible por un corto periodo debido a que se está actualizando su información.
