Varios cambios, contenido nuevo en la sección de discord.js y retoques de documentos principales

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,7 +1,5 @@
-# :(
-No pudimos ubicar la dirección de esta página.
-
-¿Por qué sucede esto?
-* El contenido no existe. ¡Puedes crear esta página!
-* El contenido fue redireccionado a un nuevo destino.
-* La página solicitada no está disponible por un corto periodo debido a que se está actualizando su información.
+<center>
+	<img src="https://i.gifer.com/45y2.gif"><br>
+	<font size=30><b>404</b></font><br>
+	**¡No pudimos encontrar este contenido en la documentación!**<br> Quizás sea producto del [efecto Mandela](https://es.wikipedia.org/wiki/Falsos_recuerdos).
+</center>
