--- a/docs/404.md
+++ b/docs/404.md
@@ -1,5 +1,5 @@
 <center>
 	<img src="https://i.gifer.com/45y2.gif"><br>
 	<font size=30><b>404</b></font><br>
-	**¡No pudimos encontrar este contenido en la documentación!**<br> Quizás sea producto del [efecto Mandela](https://es.wikipedia.org/wiki/Falsos_recuerdos).
+	<b>¡No pudimos encontrar este contenido en la documentación!</b><br> Quizás sea producto del <a href="https://es.wikipedia.org/wiki/Falsos_recuerdos">Efecto Mandela</a>.
 </center>
